[package]
name = "cp77_external_radio"
version = "2.1.6"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
red4ext-rs = { git = "https://github.com/DrJackieBright/red4ext-rs.git"}

[dependencies.windows]
version = "0.35.0"
features = [
    "Media_Control",
    "Media",
    "Foundation"
]